--- a/runtests/csharp_simple_json/simple_json.csproj
+++ b/runtests/csharp_simple_json/simple_json.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <DefineConstants>APP</DefineConstants>
+    <NoWarn>3021</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
