--- a/TBNF.fsproj
+++ b/TBNF.fsproj
@@ -25,6 +25,7 @@
     <Compile Include="src/Backends.PythonLark.fs" />
     <Compile Include="src/Backends.OCamlMenhir.fs" />
     <Compile Include="src/Backends.CSharpAntlr.fs" />
+    <Compile Include="src/Backends.TypeScriptAntlr.fs" />
     <Compile Include="src/APIs.fs" />
     <Compile Include="src/Main.fs" />
   </ItemGroup>
