--- a/tbnf-js/package.json
+++ b/tbnf-js/package.json
@@ -13,7 +13,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@types/argparse": "^2.0.10",
     "@vercel/ncc": "^0.33.3",
-    "argparse": "^2.0.1"
+    "argparse": "^2.0.1",
+    "js-beautify": "^1.14.3"
   },
   "scripts": {
     "makecommonjs": "babel src --out-dir src --copy-files",
