--- a/TBNF.fsproj
+++ b/TBNF.fsproj
@@ -6,10 +6,10 @@
     <!-- <DefineConstants>DEBUG</DefineConstants> -->
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="FableSedlex/PrettyDoc.fs" />
-    <Compile Include="FableSedlex/Sedlex.fs" />
-    <Compile Include="FableSedlex/CodeGen.Python.fs" />
-    <Compile Include="FableSedlex/CodeGen.Julia.fs" />
+    <Compile Include="src/FableSedlex/PrettyDoc.fs" />
+    <Compile Include="src/FableSedlex/Sedlex.fs" />
+    <Compile Include="src/FableSedlex/CodeGen.Python.fs" />
+    <Compile Include="src/FableSedlex/CodeGen.Julia.fs" />
     <!-- <Compile Include="lark_fs/Lark.fs" /> -->
     <Compile Include="src/ResourceKeys.fs" />
     <Compile Include="src/Utils.fs" />
@@ -33,7 +33,6 @@
     <Compile Include="src/Main.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fable.Core.Experimental" Version="4.0.0-alpha-021" />
-    <!-- <PackageReference Include="Fable.Python" Version="0.16.0" /> -->
+    <PackageReference Include="Fable.Core" Version="4.4.0" />
   </ItemGroup>
 </Project>
