WIP: migrating to nomake

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
     "imports": {
-        "nomake": "https://github.com/thautwarm/nomake/raw/v0.1.12/mod.ts"
+        "nomake": "https://raw.githubusercontent.com/thautwarm/nomake/v0.1.12/mod.ts"
     }
 }
