--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,10 +24,10 @@ jobs:
           - os: ubuntu-latest
             rid: linux-arm64
             artifact_name: tbnf-linux-arm64
-          - os: macos-12
+          - os: macos-latest
             rid: osx-x64
             artifact_name: tbnf-osx-x64
-          - os: macos-12
+          - os: macos-latest
             rid: osx-arm64
             artifact_name: tbnf-osx-arm64
           - os: windows-latest
