.gitattributes: mark all ANTLR4 g4 files as generated

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,7 +8,7 @@
 *.mli linguist-detectable=false
 *.mly linguist-detectable=false
 runtests/**/*.jl linguist-detectable=false
-*.g4 linguist-generated=false
+*.g4 linguist-generated=true
 cli.aot/* linguist-generated=true
 editor/typedbnf/src/grammar/TBNF* linguist-generated=true
 editor/typedbnf/src/grammar-sh/TBNF* linguist-generated=true
